# Y11

./: .editorconfig  README.md  argumenty_nienawisci_do_cpp.md  meson.build  y11.cc
src/: backend.hpp  color.hpp  padding.hpp  point.hpp  rect.hpp  size.hpp
src/animations/: animation.cc  animation.hpp  keyframe.cc  keyframe.hpp
src/backends/sfml/: sfml_backend.cc  sfml_backend.hpp  sfml_renderer.cc  sfml_renderer.hpp  sfml_widget_metadata.cc  sfml_widget_metadata.hpp
src/events/: cursor.cc  cursor.hpp  event.hpp  event_loop.cc  event_loop.hpp
src/widgets/: button.cc  button.hpp  circle.cc  circle.hpp  column.cc  column.hpp  common.cc  common.hpp  composite.cc  composite.hpp  composite_widget.cc  composite_widget.hpp  ellipse.cc  ellipse.hpp  layout.cc  layout.hpp  layout_metadata.hpp  rectangle.cc  rectangle.hpp  renderer_metadata.hpp  renderer_visitor.hpp  root.cc  root.hpp  row.cc  row.hpp  text.cc  text.hpp  widget.cc  widget.hpp
